[package]
name = "web-api-iron"
version = "0.1.0"
authors = ["Omar Jair Purata Funes <omarpurataf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.5"
router = "0.6"
logger = "0.4"
env_logger = "0.8"
rustc-serialize = "0.3"
chrono = { version = "0.2", features = ["rustc-serialize"] }
uuid = { version = "0.8", features = ["v4", "rustc-serialize"] }
